Bug 695255 - Change NS_ARRAY_LENGTH to ArrayLength by using using namespace mozilla and mozilla/Util.h. r=neil